--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "prisma": "^4.15.0"
